Fix nav and product spacing

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -2,7 +2,7 @@
 
 .homepage_container {
     width: 100%;
-    height: 100vh;
+    height: 93vh;
     margin-top: 70px;
 }
 
@@ -42,7 +42,7 @@
 /* MEDIA QUERIES (MEDIUM DEVICES) */
 @media screen and (max-width: 1024px) {
     .homepage_container {
-        height: 92.8vh;
+        height: 87vh;
     }
     
     .home_text h1 {
@@ -63,7 +63,7 @@
 
 @media screen and (max-width: 600px) {
     .homepage_container {
-        height: 91.4vh;
+        height: 84vh;
     }
     
     .home_text h1 {
